--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vue3-project-template",
-  "private": true,
+  "private": false,
+  "author": "QuanLong Lu",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -10,25 +11,26 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "pinia": "^2.1.7",
+    "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^10.9.0",
     "element-plus": "^2.6.3",
-    "@element-plus/icons-vue": "^2.3.1"
+    "pinia": "^2.1.7",
+    "view-ui-plus": "^1.3.20",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
     "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.18",
+    "less": "^4.2.0",
+    "postcss": "^8.4.35",
+    "postcss-preset-env": "^9.4.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "typescript": "^5.4.3",
-    "vite": "^5.2.6",
-    "vue-tsc": "^2.0.7",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
-    "postcss": "^8.4.35",
-    "postcss-px-to-viewport": "^1.1.1",
-    "autoprefixer": "^10.4.18",
-    "postcss-preset-env": "^9.4.0",
-    "less": "^4.2.0"
+    "vite": "^5.2.6",
+    "vue-tsc": "^2.0.7"
   }
 }
